# Resnet23

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Resnet23/: __init__.py  config.py  datadownload.py  dataset.py  features.py  plots.py
Resnet23/modeling/: Model23.py  matrics.py  predict.py  train.py
docs/: README.md  index.md  mkdocs.yml
docs/docs/: index.md
search/: search_index.json
