[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Resnet23"
version = "0.0.1"
description = "creation of resnet module with 23 layers and using it on a classification task with  the Cifar dataset"
authors = [
  { name = "Djames Eddine" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["Resnet23"]
include = ["pyproject.toml", "Resnet23/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Resnet23"]
force-sort-within-sections = true

